# Vicinity

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  DEVLOG.md  IMPLEMENTATION.md  PHASE34_PLAN.md  README.md  RELEASE.md  UX_AUDIT_34a.md  UX_AUDIT_34b.md  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts  vitest.config.ts
.claude/: kickoff-1.md
.hermes/plans/: 2026-06-20_205142-unify-three-feeds.md
__tests__/: create-upload.test.ts  extract-json.test.ts  webhook-signature.test.ts
alembic/: env.py
alembic/versions/: c6994c80efbe_init_agents_listings_leads_enrichment_.py
app/: globals.css  layout.tsx  page.tsx
app/(auth)/: layout.tsx
app/_actions/: preview.ts  saved-communities.ts
app/_components/: BottomNav.tsx  BottomNavWrapper.tsx  CommunityGrid.tsx  DesktopSidebar.tsx  DesktopSidebarWrapper.tsx  EmptyHubState.tsx  GridCard.tsx  GridPageShell.tsx  ListingGrid.tsx  Logo.tsx  PreviewBanner.tsx  SiteHeader.tsx  SiteHeaderWrapper.tsx  TopBar.tsx  TopBarWrapper.tsx  TopRightAvatar.tsx  UploadFAB.tsx  UploadSheet.tsx  nav-config.ts  upload-prefill-store.ts  upload-status-store.ts
app/dashboard/: layout.tsx  loading.tsx  page.tsx  top-bar.tsx
components/dashboard/: ListingVideosLive.tsx  VideoUploader.tsx
components/site/: BrandMark.tsx  LegalLayout.tsx  SiteFooter.tsx  SiteHeader.tsx
docs/: manual-tests.md
lib/: demo-media.ts
lib/ai/: anthropic.ts  social-cache.ts
lib/analytics/: entity-stats.ts  listing-stats.ts
lib/auth/: preview.ts
lib/zod/: auth.ts  (+4 more)
vicinity/: config.py
(+194 files in other folders)
