[project]
name = "vicinity"
version = "0.1.0"
description = "Listing landing pages for North America Chinese real estate agents"
requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit>=1.40",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.0",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.40",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
mypy_path = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
